fixed figure rendering

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -7,17 +7,17 @@ However, the quartet of atom types do not always capture the relevant chemistry,
 are non local i.e., atoms contributing to hyperconjugation, delocalization or other non classical effects,
 are not part of the quartet involved in the torsion [@doi:10.1186/s13321-019-0371-6]. Figure {@fig:biphenyls}, A illustrates
 such a case with a series of biphenyls in different protonation states. While the MM torsion profiles
-are all the same (@fig:biphenyls D), the QC torsion profiles are different for each protonation state (@fig:biphenyls E).
+are all the same (Figure @fig:biphenyls D), the QC torsion profiles are different for each protonation state (Figure @fig:biphenyls E).
 The torsion energy barrier increases relative to the neutral state for the cation, anion and zwitterion, in that order.
 The profile changes qualitatively as well. For the neutral molecule, the lowest energy conformer
 is slighlty out of plane, at $150^{\circ}$ and $120^{\circ}$.  For the zwitterion, the lowest energy 
 conformer is at $180^{\circ}$. In the neutral molecule, the slightly out of plane conformer is preferred to accommodate
 the hydrogens. However, the central bond in the zwitterion is part of the larger conjugated system between the two aromatic
-rings (@fig:biphenyls B) so the planar conformer is preferred to enable conjugation.
+rings (Figure @fig:biphenyls B) so the planar conformer is preferred to enable conjugation.
 
 This trend poses several problems to
 automatic forcefield parametrization. Most forcefields consider the central bond
-in the zwitterion rotatable which is reflected in the same torsion parameters for all four molecules (@fig:biphenyls, D)
+in the zwitterion rotatable which is reflected in the same torsion parameters for all four molecules (Figure @fig:biphenyls, D)
 while the QC scan clearly shows that it is not. This illustrates one
 of the fundamental limits of atom types in classical forcefields. At what point in this series should
 a new atom type be introduced? The Open Force Field Initiative's effort on automating data driven direct
@@ -49,9 +49,9 @@ occupied atomic orbitals on atoms A and B
 For quantum chemistry, AOs are often non-orthogonal and require normalization for the WBO to be valid. In the case of WBOs in Psi4 [@doi:10.1021/acs.jctc.7b00174] the Löwdin normalization [@doi:10.1063/1.1747632; @doi:10/bdfk5f] scheme is used.
 For the practical purposes of this paper, the Wiberg and Wiberg-Löwdin schemes are identical and will be described as "WBO"s for both semi-empirical and quantum chemistry methods.
 
-We calculated the WBO from AM1 calculations for the biphenyl series as shown in figure @fig:biphenyls A. The increase in the WBO corresponds
+We calculated the WBO from AM1 calculations for the biphenyl series as shown in Figure @fig:biphenyls A. The increase in the WBO corresponds
 to increasing conjugation and torsion energy barrier height of the bond. When the torsion energy barrier heights are plotted against
-the WBO (fig @fig:biphenyls E), the relationship is linear with an $r^2$ of 0.97.
+the WBO (Figure @fig:biphenyls E), the relationship is linear with an $r^2$ of 0.97.
 
 ### 3.3 The WBO is an inexpensive surrogate for the chemical environment around a bond
 Since the WBO can be calculated from a cheap AM1 calculation, is indicative of a bond's conjugation, and is correlated with torsion energy
@@ -88,20 +88,20 @@ B3LYP-D3(BJ) / DZVP [@doi:10.1139/v92-079; @doi:10.1063/1.464913; @doi:10.1063/1
 using Psi4 [@doi:10.1021/acs.jctc.7b00174]. Omega is a knowledge-based
 conformer generator that uses a modified version of MMFF94s [@doi:10/brxdg7] to score conformations. It has been shown to accurately reproduce experimentally
 observed crystallography conformers in the Platinum benchmark dataset [@doi:10.1021/acs.jcim.7b00505]. Figure @fig:wbo_var_corr illustrates
-the results for Gefitinib (@fig:wbo_var_corr, A), a representative molecule. Figure @fig:wbo_var_corr, B shows the distribution of WBOs for all rotatable bonds
-color coded with the colors used to highlight the bonds in Gefitinib (@fig:wbo_var_corr, A). Single carbon-carbon bonds, and carbon-nitrogen bonds
+the results for Gefitinib (Figure @fig:wbo_var_corr, A), a representative molecule. Figure @fig:wbo_var_corr, B shows the distribution of WBOs for all rotatable bonds
+color coded with the colors used to highlight the bonds in Gefitinib (Figure @fig:wbo_var_corr, A). Single carbon-carbon bonds, and carbon-nitrogen bonds
 formed by atoms numbered 10 - 13 are freely rotating. This is reflected by the tighter distribution (lower variance) of WBOs around closer to one for those bonds.
 The bonds involving the ether oxygens and aromatic rings (formed by atoms numbered 1-3, 8-10, 19, 23-24) exhibit higher variance. It is interesting to note the
 difference in the WBOs for the conjugated bonds formed by the nitrogen between
 the quinazoline and chloro fluro phenyl (bonds formed by atoms numbered 19, 23 and 23, 24). Both of these bonds are conjugated
 with their neighboring ring systems, however, While the distribution of WBOs for bond 23-19
 (the grey distribution) has two modes clear modes of almost equal weights, the WBO distribution for bond 24-23 has lower variance. This is in agreement
-with the resonance structures shown in figure @fig:wbo_var_corr. The resonance strictures that have the double bond on the bond closer to
+with the resonance structures shown in Figure @fig:wbo_var_corr. The resonance strictures that have the double bond on the bond closer to
 the quinazoline (bond 19-23) are more stable because the negative charge is on a nitrogen. When the double bond is on the neighboring
 23-24 bond, the negative charge is on an aromatic carbon which is less stable. The results are similar for other kinase inhibitors
-tested shown in SI Figure @fig:kinase_inhibitors. In addition, when we inspected the conformations associated with the highest and lowest WBO in the grey distribution (fig @fig:wbo_var_corr, E)
+tested shown in SI Figure @fig:kinase_inhibitors. In addition, when we inspected the conformations associated with the highest and lowest WBO in the grey distribution (Figure @fig:wbo_var_corr, E)
 we found that conformations with lowest WBO on bond 19-23 had that bond out of plane while the conformation with the highest WBO value
-had the bond in plane which allows conjugation. We found similar results from WBOs calculated form QC torsion scans. Fig @fig:sub_phenyl_qc_scan shows the WBO
+had the bond in plane which allows conjugation. We found similar results from WBOs calculated form QC torsion scans. Figure @fig:sub_phenyl_qc_scan shows the WBO
 for each point in the QC corresponding torsion scans. The WBOs are anti-correlated with the torsion potential energy
 which is in line with chemical intuition. Conjugation stabilizes conformations and leads to more electronic population overlap in bonds [@doi:10.1351/pac198961040635].
 At higher energy conformers, the aromatic rings are out of plan and cannot conjugate. Therefore the WBO is lower for those conformers. At lower energy
@@ -127,7 +127,7 @@ for other kinase inhibitors tested as shown in SI Figure @fig:kinase_inhibitors.
 ![**Standard deviations of conformation-dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments**
 The distribution of standard deviations of WBO distributions over conformations is shown in blue. The distribution of standard deviations of ELF10 WBO distributions for the same
 bond in different chemical environments is shown in pink. The changes in WBO due to conformations are smaller than the changes in WBO due to chemical changes around the bond.
-The validation set (SI @fig:full_validation_set), was used to generate these distributions. The blue sandard deviation distribution was calculated over 140602 WBO dependent distributions (this is the
+The validation set (SI Figure @fig:full_validation_set), was used to generate these distributions. The blue sandard deviation distribution was calculated over 140602 WBO dependent distributions (this is the
 number of individual fragments in the dataset). The pink standard deviation distribution was calculated over 366 distributions of 366 bonds
 in different chemical environments (of the 140602 fragments)](images/standard_deviations.svg){#fig:standard_deviations}
 
@@ -158,7 +158,7 @@ nitriles. The pink distribution include bonds that have oxygens. The mode at two
 
 This method can also be applied to derive WBOs that are insensitive to conformers. To check how well ELF10 estimated $W_{AB}$ recapitulates the multiplicity of bonds,
 we calculated $W_{AB}$ from AM1 ELF10 calculations
-for all bonds in a set of molecules shown in SI Figure @fig:wbo_dist_mols. The distribution in figure @fig:wbo_dists corresponds
+for all bonds in a set of molecules shown in SI Figure @fig:wbo_dist_mols. The distribution in Figure @fig:wbo_dists corresponds
 closely with bond multiplicity. The density at ~ 0.7 correspond bonds involving sulfur and phosphorous since these are weaker and longer bonds. The mode at ~1.0
 corresponds to C-H and C-C bonds, the mode close to 1.5 corresponds to bonds in aromatic rings, the mode close to 2.0 corresponds
 to double bonds, and finally the triple bonds form the last peak. Figures @fig:wbo_dists B and D separate out different kinds of bonds
@@ -178,11 +178,11 @@ The Hammett equation relates meta and para benzoic acid substituents to the acid
 
 Where $\sigma$ is a substituent constant and $\rho$ is a reaction constant. It aims to isolate the resonance and inductive effects
 of substituents from the sterics effects of a reaction. Here, we generated a combinatorial set of meta and para substituted phenyls
-and pyridine @fig:substituted_phenyls A with 26 functional groups that cover a wide range of electron donating and withdrawing groups.
+and pyridine (Figure @fig:substituted_phenyls, A) with 26 functional groups that cover a wide range of electron donating and withdrawing groups.
 (details on generating and accessing this set is in section 5.3.2 in detailed methods)
 We then calculated the ELF10 WBO for the bond attaching the functional group to the aromatic ring (highlighted green in
-Figure @fig:substituted_phenyls A) for all functional groups which resulted in 133 (26 * 5 + 3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
-defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in figure @fig:substituted_phenyls, B.
+Figure @fig:substituted_phenyls, A) for all functional groups which resulted in 133 (26 * 5 + 3) data points for each functional group. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
+defined as a change more than two bonds away, from other effects such as sterics and conformations. The resulting distributions are in Figure @fig:substituted_phenyls, B.
 It is interesting to note that the trend of decreasing WBOs for more electron
 donating groups are anti correlates with increasing Hammett substituent constants. In SI Figure @fig:hammett, the AM1 ELF10 WBO of the bond
 between the functional group and benzoic acid is plotted against their Hammett meta and para substituent constants (values were taken from Hansch et al. [@doi:10.1021/cr00002a004]). Functional groups
@@ -246,11 +246,11 @@ the changes in the QC torsion scan captures spacial effects while the WBO scans 
 
 For most functional groups, the change in WBOs correspond to changes in torsion barrier heights (SI Figures @fig:phenyl_td_1 - @fig:phenyl_td_5).
 However, for some functional groups, the change in WBO does not fully capture the differences in torsion scans because not only do the torsion energy
-barrier heights increase, but the profile changes considerably. as shown in {@fig:sub_phenyl_qc_scan}C for urea. Interestingly, the Wiberg
-bond order scans do have the same profiles {@fig:sub_phenyl_qc_scan} D. These phenomena and the discrepancies observed in Figure @fig:substituted_phenyls D,
+barrier heights increase, but the profile changes considerably. as shown in Figure {@fig:sub_phenyl_qc_scan}C for urea. Interestingly, the Wiberg
+bond order scans do have the same profiles (Figure {@fig:sub_phenyl_qc_scan} D). These phenomena and the discrepancies observed in Figure @fig:substituted_phenyls D,
 are discussed in more detail in section 4.3 in the discussion.
 
-When we compare the standard deviations of WBO distributions with respect to conformation versus with respect to changes in chemical space (figure @fig:standard_deviations, pink distribution),
+When we compare the standard deviations of WBO distributions with respect to conformation versus with respect to changes in chemical space (Figure @fig:standard_deviations, pink distribution),
 we find that the changes in ELF10 WBO for remote chemical environment changes are usually bigger than the changes in WBO that arise from change in conformation.
 This allows us to use the difference in ELF10 WBO of parent and fragment as a good surrogate to the level of disruption of the chemical environment.
 
@@ -271,7 +271,7 @@ the WBO on the same bond in the parent molcules](images/fragmentation_scheme.svg
 The WBO is a robust indicator of changes in torsion energy barrier heights for related torsions. Therefore, if a fragment's
 WBO changes too much from its parent WBO at the same bond, the fragmentation is probably inadequate. Using this concept,
 we extended the fragment-and-cap scheme (with slight changes) proposed by [@doi:10.1021/acs.jcim.9b00373] by considering resonance via WBOs. The scheme, illustrated
-in figure @fig:frag_scheme is as follows:
+in Figure @fig:frag_scheme is as follows:
 
 1. Find acyclic bond. For this step we use the SMARTS pattern `[!$(*#*)&!D1]-,=;!@[!$(*#*)&!D1]`.
 2. Keep the four atoms in the torsion quartet and all atoms bonded to those atoms (this ensures that all 1-5 atoms are included in the minimal fragment).
@@ -345,15 +345,15 @@ lower left corner. **[C]** Selected fragments. Bonds are highlighted with their 
 in the boxes above the highlighted bonds.](images/figure_9.svg){#fig:dabrafenib_wbo_dists}
 
 Figure {@fig:dabrafenib_wbo_dists} shows an example of the results of exhaustive
-fragmentation and how this data can be used to benchmark fragmentation schemes. All rotatable bonds in the parent molecule, Dabrafenib ({@fig:dabrafenib_wbo_dists}C 4)
+fragmentation and how this data can be used to benchmark fragmentation schemes. All rotatable bonds in the parent molecule, Dabrafenib (Figure {@fig:dabrafenib_wbo_dists}C 4)
 were fragmented into 11 fragments (in this example, the trimethyl was not fragmented) resulting in 108 connected fragments when all connected combinations were generated.
 Of those 108 fragments, 44 fragments contained the bond between the sulfur in the sulfonamide and phenyl ring highlighted in fragments in {@fig:dabrafenib_wbo_dists}C.
 When the WBOs were calculated for all Omega generated conformers for each of the 44 fragments, the resulting WBO distributions clustered
-into 4 distinct bins ({@fig:dabrafenib_wbo_dists}A). Upon closer inspection we found that the shifts of the distributions corresponded
+into 4 distinct bins (Figure {@fig:dabrafenib_wbo_dists}A). Upon closer inspection we found that the shifts of the distributions corresponded
 to specific remote substituent changes, in this case the loss of fluorine and the phenyl ring bonded to the nitrogen in the sulfonamide.
 Here, these two changes cause the distributions to shift in opposite directions. While the loss of a fluorine on the phenyl bonded to the
 sulfure shifts the distribution to the right, the loss of the ring bonded to the nitrogen shifts the distributions to the left illustrating that
-the changes are multi dimensional. Fragments 2, 3, 4, and 6 ({@fig:dabrafenib_wbo_dists}C) all contain two fluorine and fall in the same
+the changes are multi dimensional. Fragments 2, 3, 4, and 6 (Figure {@fig:dabrafenib_wbo_dists}C) all contain two fluorine and fall in the same
 cluster as the parent molecule, regardless if the rest of the molecule is included in the fragment. Fragments 7 and 9 only have one fluorine on the
 phenyl ring and both of their distributions are shifted to the right relative to the parent WBO distribution. Fragments 10 and 11 have no fluorine
 on the ring and are shifted to the right even more. Since removing the ring bonded to the nitrogen shifts the WBO distribution in the opposite direction,
@@ -376,11 +376,11 @@ $$MMD = \sqrt{(\mathbb{E}[X]-\mathbb{E}[Y])^2 + (\mathbb{E}[X^2] - \mathbb{E}[Y^
 where $X$ is the parent WBO distribution and $Y$ is the fragment WBO distribution. Including the squared mean incorporates the variance
 of the distribution and helps distinguish distributions both with different means and variances. It is important incorporate changes in variance
 given how the variance of the WBO distributions change for different
-chemical environments (see figure {@fig:sub_phenyl_qc_scan}B and D. Change in variance corresponds to change in
+chemical environments (see Figure {@fig:sub_phenyl_qc_scan}B and D. Change in variance corresponds to change in
 relative barrier heights).
 
-In figure {@fig:dabrafenib_wbo_dists}, the MMD score, which we call the distance score, is shown with the color map. The
-distributions in {@fig:dabrafenib_wbo_dists}A are shaded with the distance score. The scores clearly differentiates the shifted distributions.
+In Figure {@fig:dabrafenib_wbo_dists}, the MMD score, which we call the distance score, is shown with the color map. The
+distributions in Figure {@fig:dabrafenib_wbo_dists}A are shaded with the distance score. The scores clearly differentiates the shifted distributions.
 
 #### 3.5.2 Good fragmentation schemes minimize both chemical environment disruption and fragment size
 The goal of our fragmentation scheme is to find fragments that have a WBO distribution of the bond of interest closest the the parent
@@ -389,7 +389,7 @@ of heavy atoms because DFT calculations grow by $O(n^3)$. The distance score cal
 WBO distribution is or how much the chemical environment changed from its parent. When we plot the fragment size against this score,
 the points that fall on the Pareto front [CITE] are the ones where the distance score is the best for for a given fragment
 size or vice versa. Figure {@fig:dabrafenib_wbo_dists}B shows an illustrative example of this. The fragments data points on the
-Pareto front have a black dot in the center. The numbers on the annotated data points correspond the the numbered fragments in {@fig:dabrafenib_wbo_dists}C.
+Pareto front have a black dot in the center. The numbers on the annotated data points correspond the the numbered fragments in Figure {@fig:dabrafenib_wbo_dists}C.
 Fragment 6 has is the smallest fragment with the smallest distance to the parent molecule. It has the important chemical moieties, such as
 all three fluorine and the ring bonded to the nitrogen. While fragments 2 and 5 are also on the Pareto front, the missing ring and fluorine
 increase the distance score, however, it is not clear if this difference is significant. It is interesting to note that fragment 3, which is
@@ -410,42 +410,42 @@ The bond sensitivity score is given by finding the maximum distance score of WBO
 generated by exhaustive fragmentation, to the WBO distribution of the same bond in the parent molecule.
 Fragments used to get the maximum distances include all 1-5 atoms around the highlighted bonds. Molecules 10-12 also show
 the atoms the bonds are sensitive to. The atoms are circled with the same color as the bond that is sensitive to it.
-The rest of the molecules used in the validation set are shown in SI figure @fig:full_validation_set ](images/figure-10_inkscape.svg){#fig:validation_set}
+The rest of the molecules used in the validation set are shown in SI Figure @fig:full_validation_set ](images/figure-10_inkscape.svg){#fig:validation_set}
 
 The goal of any fragmentation scheme is to find fragments on the Pareto front that minimize both the changes in the chemical environment of the bond
 and fragment size. In other words, they should be on the lower left corner of the plot. To test our fragmentation scheme, we wanted to find the
 molecules that are challenging to fragment. To do that, we scored the WBO distributions of all resulting fragments from our exhaustive fragmentation
 experiment using equation @eq:mmd_sqrd and chose 100 molecules that had bonds where fragments that included all 1-5 atoms around the central bond had
-the highest distance scores. Selected molecules with the bonds highlighted according to their sensitivity are shown in figure {@fig:validation_set}. The
-rest of the molecules are shown in SI figure @fig:full_validation_set. This set included many molecules in charged states. The sensitivity score of the bonds are given by taking the MMD of the
+the highest distance scores. Selected molecules with the bonds highlighted according to their sensitivity are shown in Figure {@fig:validation_set}. The
+rest of the molecules are shown in SI Figure @fig:full_validation_set. This set included many molecules in charged states. The sensitivity score of the bonds are given by taking the MMD of the
 fragment where the WBO distribution of that bond has the greatest distance relative to the WBO distribution of the bond in the parent molecule. This is
 a good indication of a bond's sensitivity to peripheral fragmentation because the more its WBO distribution shifts relative to the parent when fragmented,
 the more the electronic population overlap around that bond changes with remote chemical changes.
 
 Not all bonds are equally sensitive to such changes. This is shown by how different the sensitivity score is for
-different bonds in the same molecule in figure {@fig:validation_set}. The general trend observed is that conjugated bonds,
-and bonds including atoms with lone pairs such as N, O, and S, are more sensitive to peripheral cuts. Molecules 10-12 (fig{@fig:validation_set}) also
+different bonds in the same molecule in Figure {@fig:validation_set}. The general trend observed is that conjugated bonds,
+and bonds including atoms with lone pairs such as N, O, and S, are more sensitive to peripheral cuts. Molecules 10-12 (Figure {@fig:validation_set}) also
 show which chemical moiety the bond is sensitive to, indicated by circles around the atoms which are colored with the corresponding bond's sensitivity score. In molecule 10,
 the WBO distribution of the amide bond shifts significantly if the positively charged nitrogen is remove regardless if the rest of the molecule is intact (data not shown).
 In molecule 11, the removal of the phosphate group shifts the distribution of the red bond. In molecule 12, both the amide and ester bond are sensitive to the same
 negatively charged oxygen indicated by two circles around the oxygen.
 
 ![**Assessment of fragmentation scheme illustrate an accuracy vs cost trade-off**
-Computational cost vs distance score of the fragments for the bonds in the benchmark set shown in figure {@fig:full_validation_set}.
+Computational cost vs distance score of the fragments for the bonds in the benchmark set shown in Figure {@fig:full_validation_set}.
 Computational cost is the cubed of heavy atoms in the fragment. The threshold is the maximum amount of change allowed
 in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](images/figure-11-fixed.svg){#fig:joint_plots}
 
-We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner (illustrated in figure {@fig:dabrafenib_wbo_dists}, B).
-To do that, we generated fragments for the red bonds in the 100 molecules shown in figure {@fig:full_validation_set} set using different disruption thresholds. For every fragment, we found the distance
+We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner (illustrated in Figure {@fig:dabrafenib_wbo_dists}, B).
+To do that, we generated fragments for the red bonds in the 100 molecules shown in Figure {@fig:full_validation_set} set using different disruption thresholds. For every fragment, we found the distance
 score of their fragments' WBO distribution and their computational cost. We then plotted all fragments from the validation set for different thresholds {figure {fig:joint_plots}.
 When the threshold is low, the fragmenation scheme will generate fragments which have very good distance scores, but many of them will be too big
 for computational efficient QC torsion scan. On the other hand, when the disruption threshold is too low, the scheme generates
 fragments that are small but the distance scores are too big. For the molecules we tested, a threshold of 0.03 leads to the most fragments
 in the lower left quadrant (defined as cost < 10000 and score < 0.05) as shown in table @tbl:benchmark. This threshold is similar to what we found when we looked at the distribution of standard deviations for
-WBO distributions with respect to conformations (@fig:standard_deviations, blue). Most of them fall under 0.03. Both of these data points
+WBO distributions with respect to conformations (Figure @fig:standard_deviations, blue). Most of them fall under 0.03. Both of these data points
 leads us to recommend a distruption threshold of 0.03 for our fragmentation scheme. While the current scheme does not provide a perfect solution,
-plots in figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01, 0.03 and 0.05. This scheme  preforms better than other schemes such as the
-scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots}, lower right and table @tbl:benchmark).
+plots in Figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01, 0.03 and 0.05. This scheme  preforms better than other schemes such as the
+scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](Figure {@fig:joint_plots}, lower right and table @tbl:benchmark).
 
 |distruption threshold | fragments in lower left quadrant |
 |---|---|
@@ -458,32 +458,32 @@ scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots},
 | 0.1 | 200 |
 | scheme from @doi:10.1021/acs.jcim.9b00373 | 189 |
 
-Table: Number of fragments in the lower left quadrant in figure {@fig:joint_plots} defined as a distance score less than
+Table: Number of fragments in the lower left quadrant in Figure {@fig:joint_plots} defined as a distance score less than
 0.1 and computational cost less than 10000. {#tbl:benchmark}
 
 #### 3.5.3 Benchmark results reveal chemical groups that induce long range effects
 
 ![**Using the WBO as an indicator of chemical environment distruption improves fragmentation**
-Distribution of differences in distance scores for fragments in the validation set (SI fig @fig:full_validation_set) generated using
+Distribution of differences in distance scores for fragments in the validation set (SI Figure @fig:full_validation_set) generated using
 Pfizer's rules and our scheme using 0.03 as the distruption threshold. For many bonds, both approaches yield equally preforming fragments (shown in green). In some cases,
 Prizer's rules preforms better than our scheme (shown in red), however, the differences are usually very small. In most cases, using the WBO as an indicator improves
 the distance score (shown in blue)](images/combined_score_differences.svg){#fig:difference_hist}
 
-In the benchmark experiment (figure @fig:joint_plots), the distance scores measured the distance between WBO distributions generated from Omega generated conformers of the parents and fragments.
+In the benchmark experiment (Figure @fig:joint_plots), the distance scores measured the distance between WBO distributions generated from Omega generated conformers of the parents and fragments.
 Omega aims to generate low energy conformers [@doi:10.1021/ci100031x] and in some cases, fragments only have one or two low energy conformers so it is not clear
 how accurate the distances measured are. In addition, only comparing low energy conformers do not fully capture torsion energy barriers which we
 also want to ensure remain accurate relative to their parent's torsion energy scan. To mitigate the above mentioned issues when validating our scheme,
 we also added WBOs calculated from conformers generated on a grid of torsion angles about the bonds which included higher energy conformers
 that are closer to conformers generated in canonical torsion scans. Furthermore, since we know that WBOs from structures in a QC torsion scan
-are anti correlated with the QC torsion energy scan (@fig:sub_phenyl_qc_scan), adding these WBOs to the distributions provided a better validation
+are anti correlated with the QC torsion energy scan (Figure @fig:sub_phenyl_qc_scan), adding these WBOs to the distributions provided a better validation
 of our method than only looking at the distance between omega generated WBO distributions. The differences in distances of these distributions from fragments
-generated with our scheme and [@doi:10.1021/acs.jcim.9b00373] is shown in figure @fig:difference_hist.
+generated with our scheme and [@doi:10.1021/acs.jcim.9b00373] is shown in Figure @fig:difference_hist.
 
 For many molecules, using a common sense rule based approach, such as the one used in [@doi:10.1021/acs.jcim.9b00373] to fragmenting molecules, will yield fragments that are
-the same fragments generated with our scheme shown in green in figure {@fig:difference_hist}, and sometimes can even preform slightly better than
-using the WBO as an indicator (fig {@fig:difference_hist}, red). However, in many cases, especially if certain chemical groups are involved, using
-the WBO as an indicator significantly improves the electron population overlap about the bonds and brings them closer to their parent's chemical environment (fig @fig:difference_hist, blue).
-It is important to note that when the fragment generated from both scheme are the same (green in figure @fig:difference_hist), they are not necessarily the
+the same fragments generated with our scheme shown in green in Figure {@fig:difference_hist}, and sometimes can even preform slightly better than
+using the WBO as an indicator (Figure {@fig:difference_hist}, red). However, in many cases, especially if certain chemical groups are involved, using
+the WBO as an indicator significantly improves the electron population overlap about the bonds and brings them closer to their parent's chemical environment (Figure @fig:difference_hist, blue).
+It is important to note that when the fragment generated from both scheme are the same (green in Figure @fig:difference_hist), they are not necessarily the
 optimal fragment and both schemes can preform equally poorly (see SI).
 
 ![**Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments**
@@ -493,16 +493,16 @@ when those groups are removed. These changes are consistent across the validatio
 ](images/figure_12.svg){#fig:chemical_groups}
 
 Upon closer inspection of the validation set, we found eight chemical groups that induce long range effects to sensitive bonds shown in
-figure @fig:chemical_groups. These chemical groups with representative examples are shown in figure @fig:chemical_groups. The
+Figure @fig:chemical_groups. These chemical groups with representative examples are shown in Figure @fig:chemical_groups. The
 groups are ordered by how strongly they induce long range effect, in decreasing order. The most dramatic change happens when a phosphate
-group is removed (figure @fig:chemical_groups, A). The variance of the WBO distribution increases which conveys an increase in
+group is removed (Figure @fig:chemical_groups, A). The variance of the WBO distribution increases which conveys an increase in
 relative energies of conformers in the QC torsion scans. In other molecules where phosphates are removed, the variance can
-decrease even if the phosphate group is ten bonds away (figure @fig:failure_modes, F and SI). In figure @fig:chemical_groups, B, removing
+decrease even if the phosphate group is ten bonds away (Figure @fig:failure_modes, F and SI). In Figure @fig:chemical_groups, B, removing
 a protonated nitrogen that is double bonded causes the WBO distribution to shift and the variance to increase. Long range effects are seen in
-other molecules with similar chemical patterns up to eight bonds away (SI). Removing a nitrile group (fig @fig:chemical_groups, C) and sulfonamide group (@fig:chemical_groups, D)
+other molecules with similar chemical patterns up to eight bonds away (SI). Removing a nitrile group (Figure @fig:chemical_groups, C) and sulfonamide group (Figure @fig:chemical_groups, D)
 have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away (SI).
-A protonated nitrogen and deprotonated oxygen (@fig:chemical_groups E and F) can effects bonds between 3-6 bonds away (SI). While the changes in distributions
-for removing a nitro group and sulfur (@fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
+A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and F) can effects bonds between 3-6 bonds away (SI). While the changes in distributions
+for removing a nitro group and sulfur (Figure @fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
 validation set (SI).
 
 ![**Using the WBO as an indicator when fragmenting can still fail to find the optimal fragment**
@@ -517,19 +517,19 @@ not a failure mode but inherent to the challenge of fragmenting molecules for QC
 
 While our scheme captures long range effects that a simple rule based approach does not, it is not an optimal solution and will sometimes fail to find
 the most optimal fragment. By optimal we mean the smallest fragment that retains the torsion potential of the bond in the parent molecule. Our
-scheme can fail in multiple ways as illustrated in figure @fig:failure_modes and listed below.
+scheme can fail in multiple ways as illustrated in Figure @fig:failure_modes and listed below.
 
-1. We find a fragment with good WBO distributions overlap but do not find the smallest fragment. This is shown in both @fig:failure_modes A and B. In A, the fragment that Pfizer scheme find is smaller
+1. We find a fragment with good WBO distributions overlap but do not find the smallest fragment. This is shown in both Figures @fig:failure_modes A and B. In A, the fragment that Pfizer scheme find is smaller
 and has a WBO distribution that is close to the parent's WBO distribution (MMD 0.019). In this case, the ELF10 WBO estimate of the bond in the fragment
 is 0.11 lower than the ELF10 WBO estimate in the parent molecule. In B, our fragment has better WBO distribution overlap with the parent WBO distribution vs
 using Pfizer's scheme (0.017 vs 0.212), but it is not the smallest fragment. According to the fragment highlighted in purple, the benzene ring is not
 required to achieve good overlap of the WBO distributions (0.051)
-2. We find a fragment that is bigger than Pfizer's scheme fragment and the remote substituents do not improve the WBO distribution overlap (MMD 0.079 vs 0.071) (@fig:failure_modes C).
+2. We find a fragment that is bigger than Pfizer's scheme fragment and the remote substituents do not improve the WBO distribution overlap (MMD 0.079 vs 0.071) (Figure @fig:failure_modes C).
 The better fragment is shown in purple. It is both smaller and has better overlap (MMD 0.027) than the orange and green fragment.
-3. We find a fragment that is both larger and has worse overlap (0.054 vs 0.024) than what the Pfizer's scheme generates (fig @fig:failure_modes)
+3. We find a fragment that is both larger and has worse overlap (0.054 vs 0.024) than what the Pfizer's scheme generates (Figure @fig:failure_modes)
 
 While it is usually possible to find a fragment that is significantly smaller than the parent and retains remote substituent effects, the effects
 are sometimes more than 3-6 bonds away and a large fragment is needed to accurately represent the chemical environment of the parent molecule. Two such
-examples are shown in figure @fig:failure_modes E and F. In E, not only is the protonated nitrogen needed (shown in green), but the alcohol group is also needed to
+examples are shown in Figure @fig:failure_modes E and F. In E, not only is the protonated nitrogen needed (shown in green), but the alcohol group is also needed to
 achieve good WBO distribution overlap (shown in purple). In F, the phosphate group nine bonds away from the bond of interest is needed to get
 the density of of the mode at 1.2 (shown in blue and purple).
