--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -1,7 +1,6 @@
 ## 5. Detailed method
 
 ### 5.1 QCArchive data generation and archiving
-`[Hold for Daniel to write up. Please describe how QCArchive runs torsion scans and how to submit and retrieve data]`{.red}
 The MolSSI [@doi:10.1063/1.5052551] QCArchive project is a platform for computing, organizing, and sharing quantum chemistry data.
 Computations with this platform automatically record all input and output quantities ensuring the reproducibility of all computations envolved.
 In the case of computing with the MolSSI QCArchive instances, all data is automatically hosted and can be queried using the platform.
@@ -13,7 +12,7 @@ In the case of computing with the MolSSI QCArchive instances, all data is automa
 #### 5.1.2 Details on QC and MM torsion scans.
 
 All torsion scans were computed with the TorsionDrive [@url:https://github.com/lpwgroup/torsiondrive] project, which makes choices of new constrained optimizations to evaluate.
-The required constrained optimizations were then computed with the geomeTRIC [@url:https://github.com/leeping/geomeTRIC] standalone geometry optimizer interfaced to the QCEngine [url:https://github.com/molssi/qcengine] project.
+The required constrained optimizations were then computed with the geomeTRIC [@url:https://github.com/leeping/geomeTRIC] standalone geometry optimizer interfaced to the QCEngine [@url:https://github.com/molssi/qcengine] project.
 
 To ensure a fair comparison between the QC and MM torsion scans, the only change in the torsion scan procedure was to switch out the program, which evaluated the gradient at each step in the geomeTRIC optimization.
 For QC, gradients were computed at B3LYP-D3(BJ) / DZVP with the Psi4 [@doi:10.1021/acs.jctc.7b00174] program. This level of theory was chosen based on benchmark conducted by the
@@ -35,11 +34,6 @@ version v0.0.4.+25.gbb12030
 #### 5.2.2 Wiberg Bond Orders in Psi4
 
 Wiberg-Löwdin bond orders are calculated in Psi4 with the keyword `scf_properties: wiberg_lowdin_indices` using Psi4 version 1.3. All bond orders were computed during the torsion scan computations.
-
-`[Leave to Daniel to describe how Wiberg bond orders are calculated in QCArchive (it only
-calculates Wiberg-Löwdin so provide that formula and why the Löwdin normalization is needed)]`{.red}
-
-`[DGAS: I don't understand what else is needed here, you discuss this in section 4 already.]`{.red}
 
 ### 5.3 Datasets
 
