added details on benchmark

--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -95,6 +95,9 @@ as described above. All scripts used to generate this dataset are in
 [github.com/choderalab/fragmenter_data/combinatorial_fragmentation](https://github.com/choderalab/fragmenter_data/tree/master/combinatorial_fragmentation).
 The dataset is available as zip files on `(hold for link to where we will host the data)`{.red}.
 
+The benchmark set used to evaluate disruption thresholds and compare to other schemes were chosen as described in section 3.5.2.
+`fragmenter` version 0.0.5 was used to generate fragments for the different schemes and disruption thresholds.
+
 ### 5.4 Fragmenting molecules
 The `fragmenter` package provides several fragmentation schemes with various options. Below we discuss different modes of
 fragmentation and their options.
